# codex-workflow

./: .gitattributes  .gitignore  AGENTS.md  README.md  justfile
.codex/skills/codex-workflows/: SKILL.md
.github/: dotslash-config.json
.github/scripts/: build-codex-package-archive.sh  test_run_bazel_with_buildbuddy.py
.github/workflows/: build-source.yml
codex-cli/scripts/: build_npm_package.py
codex-rs/: default.nix
codex-rs/app-server/: BUILD.bazel
codex-rs/app-server-daemon/src/: managed_install.rs
codex-rs/app-server-test-client/: README.md
codex-rs/arg0/src/: lib.rs
codex-rs/cli/: BUILD.bazel  Cargo.toml
codex-rs/cli/e2e_benches/: codex_help.rs
codex-rs/cli/src/: doctor.rs  remote_control_cmd.rs
codex-rs/cli/tests/: app_server.rs  debug_clear_memories.rs  debug_models.rs  delete.rs  exec_server.rs  execpolicy.rs  features.rs  login.rs  marketplace_add.rs  marketplace_remove.rs  marketplace_upgrade.rs  mcp_add_remove.rs  mcp_list.rs  plugin_cli.rs  sandbox_network_proxy.rs  update.rs
codex-rs/core/: BUILD.bazel
codex-rs/core/src/: exec.rs
codex-rs/docs/: bazel.md
codex-rs/rmcp-client/: BUILD.bazel
codex-rs/state/: BUILD.bazel  Cargo.toml  build.rs
codex-rs/state/src/: migrations.rs  migrations_tests.rs  runtime.rs
codex-rs/tui/: BUILD.bazel
codex-rs/windows-sandbox-rs/: sandbox_smoketests.py
docs/: install.md
scripts/: debug-codex.sh  run_tui_with_exec_server.sh  start-codex-exec.sh  test-remote-env.sh  trigger-github-build.ps1
scripts/codex_package/: targets.py  test_cargo.py
scripts/install/: install.ps1  install.sh
(+56 files in other folders)
